[workspace]
members = [
  "eventsourced",
  "eventsourced-nats",
  "eventsourced-postgres",
  "examples/counter-nats",
  "examples/counter-postgres",
]

[workspace.package]
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/eventsourced"
repository    = "https://github.com/hseeberger/eventsourced"
documentation = "https://github.com/hseeberger/eventsourced"

[workspace.dependencies]
anyhow             = { version = "1" }
async-nats         = { version = "0" }
async-stream       = { version = "0" }
bb8-postgres       = { version = "0" }
bytes              = { version = "1" }
futures            = { version = "0" }
pin-project-lite   = { version = "0" }
prost              = { version = "0" }
prost-build        = { version = "0" }
serde              = { version = "1", features = [ "derive" ] }
serde_json         = { version = "1" }
testcontainers     = { version = "0" }
thiserror          = { version = "1" }
tokio              = { version = "1", features = [ "sync" ] }
tokio-postgres     = { version = "0", features = [ "with-uuid-1" ] }
tracing            = { version = "0", default-features = false }
tracing-subscriber = { version = "0", default-features = false, features = [ "fmt", "env-filter" ] }
uuid               = { version = "1", features = [ "serde", "v7" ] }
walkdir            = { version = "2" }
