[workspace]
members = [
  "eventsourced",
  "eventsourced-nats",
  "eventsourced-postgres",
  "examples/counter",
  "examples/counter-nats",
  "examples/counter-postgres",
]
resolver = "2"

[workspace.package]
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/eventsourced"
repository    = "https://github.com/hseeberger/eventsourced"
documentation = "https://github.com/hseeberger/eventsourced"

[workspace.dependencies]
anyhow                 = { version = "1.0" }
async-nats             = { version = "0.32" }
async-stream           = { version = "0.3" }
bb8-postgres           = { version = "0.8" }
bytes                  = { version = "1.5" }
configured             = { version = "0.5" }
futures                = { version = "0.3" }
humantime-serde        = { version = "1.1" }
pin-project-lite       = { version = "0.2" }
prost                  = { version = "0.12" }
prost-build            = { version = "0.12" }
serde                  = { version = "1.0", features = [ "derive" ] }
serde_json             = { version = "1.0" }
testcontainers         = { version = "0.15" }
testcontainers-modules = { version = "0.1", features = [ "postgres" ] }
thiserror              = { version = "1.0" }
tokio                  = { version = "1", features = [ "rt-multi-thread", "sync" ] }
tokio-postgres         = { version = "0.7", features = [ "with-uuid-1" ] }
tracing                = { version = "0.1", default-features = false }
tracing-subscriber     = { version = "0.3", default-features = false, features = [ "fmt", "env-filter" ] }
uuid                   = { version = "1.4", features = [ "serde", "v7" ] }
walkdir                = { version = "2.4" }
