[workspace]
members = [
  "eventsourced",
  "eventsourced-nats",
  "eventsourced-postgres",
  "eventsourced-projection",
  "examples/counter",
  "examples/counter-nats",
  "examples/counter-postgres",
]
resolver = "2"

[workspace.package]
edition    = "2021"
authors    = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license    = "Apache-2.0"
homepage   = "https://github.com/hseeberger/eventsourced"
repository = "https://github.com/hseeberger/eventsourced"

[workspace.dependencies]
anyhow                 = { version = "1.0" }
assert_matches         = { version = "1.5" }
async-nats             = { version = "0.34" }
async-stream           = { version = "0.3" }
bb8-postgres           = { version = "0.8" }
bytes                  = { version = "1.10" }
config                 = { version = "0.14" }
configured             = { version = "0.7" }
error-ext              = { version = "0.2" }
futures                = { version = "0.3" }
humantime-serde        = { version = "1.1" }
pin-project            = { version = "1.1" }
prost                  = { version = "0.12" }
prost-build            = { version = "0.12" }
secrecy                = { version = "0.8", features = [ "serde" ] }
serde                  = { version = "1.0", features = [ "derive" ] }
serde_json             = { version = "1.0" }
sqlx                   = { version = "0.7", features = [ "postgres", "runtime-tokio" ] }
testcontainers         = { version = "0.15" }
testcontainers-modules = { version = "0.3" }
thiserror              = { version = "1.0" }
tokio                  = { version = "1", features = [ "sync" ] }
tokio-postgres         = { version = "0.7", features = [ "with-uuid-1" ] }
tower                  = { version = "0.4", features = [ "util" ] }
tracing                = { version = "0.1" }
tracing-subscriber     = { version = "0.3", features = [ "env-filter" ] }
tracing-test           = { version = "0.2" }
trait-variant          = { version = "0.1" }
uuid                   = { version = "1.16", features = [ "serde", "v7" ] }
walkdir                = { version = "2.5" }
