[package]
name          = "eventsourced-nats"
description   = "NATS implementation for eventsourced EvtLog and SnapshotStore"
version       = "0.5.0"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }

[dependencies]
eventsourced = { path = "../eventsourced", version = "0.4.0" }
async-nats   = { workspace = true }
async-stream = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
prost        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
anyhow             = { workspace = true }
prost              = { workspace = true }
testcontainers     = { workspace = true }
tokio              = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow      = { workspace = true }
prost-build = { workspace = true }
walkdir     = { workspace = true }
