[package]
name          = "eventsourced-nats"
description   = "NATS implementation for eventsourced EvtLog and SnapshotStore."
version       = "0.7.0"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced-nats/latest/eventsourced-nats"

[dependencies]
eventsourced = { path = "../eventsourced", version = "0.7.0" }
async-nats   = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
prost        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
eventsourced           = { path = "../eventsourced", version = "0.7.0", features = [ "prost" ] }
prost                  = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
tokio                  = { workspace = true, features = [ "macros" ] }

[build-dependencies]
anyhow      = { workspace = true }
prost-build = { workspace = true }
walkdir     = { workspace = true }
