[package]
name          = "eventsourced-nats"
description   = "NATS implementation for EventSourced EvtLog and SnapshotStore."
version       = "0.13.4"
readme        = "README.md"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced-nats/latest/eventsourced-nats"

[dependencies]
eventsourced = { path = "../eventsourced", version = "0.15.0" }
async-nats   = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
prost        = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
eventsourced           = { path = "../eventsourced", version = "0.15.0", features = [ "serde_json" ] }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
tokio                  = { workspace = true, features = [ "macros" ] }
uuid                   = { workspace = true }

[build-dependencies]
anyhow      = { workspace = true }
prost-build = { workspace = true }
walkdir     = { workspace = true }
