[package]
name          = "eventsourced-postgres"
description   = "Postgres implementation for EventSourced EvtLog and SnapshotStore."
version       = "0.8.1"
readme        = "README.md"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced-postgres/latest/eventsourced-postgres"

[dependencies]
eventsourced    = { path = "../eventsourced", version = "0.8.1" }
async-stream    = { workspace = true }
bb8-postgres    = { workspace = true }
bytes           = { workspace = true }
futures         = { workspace = true }
humantime-serde = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-postgres  = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }

[dev-dependencies]
eventsourced           = { path = "../eventsourced", version = "0.8.1", features = [ "prost" ] }
prost                  = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
tokio                  = { workspace = true, features = [ "macros" ] }
