[package]
name          = "eventsourced-postgres"
description   = "Postgres implementation for EventSourced EventLog and SnapshotStore."
version       = "0.14.1"
readme        = "README.md"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced-postgres/latest/eventsourced-postgres"

[dependencies]
eventsourced    = { path = "../eventsourced", version = "0.27.0" }
async-stream    = { workspace = true }
bb8-postgres    = { workspace = true }
bytes           = { workspace = true }
error-ext       = { workspace = true }
futures         = { workspace = true }
humantime-serde = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-postgres  = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
error-ext              = { workspace = true }
eventsourced           = { path = "../eventsourced", version = "0.27.0", features = [ "serde_json" ] }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true, features = [ "postgres" ] }
tokio                  = { workspace = true, features = [ "macros" ] }
uuid                   = { workspace = true }
