[package]
name          = "eventsourced-projection"
description   = "Projections for EventSourced."
version       = "0.0.1"
readme        = "README.md"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced-nats/latest/eventsourced-projection"

[dependencies]
eventsourced  = { path = "../eventsourced", version = "0.15.0", features = [ "serde_json" ] }
anyhow        = { workspace = true }
async-nats    = { workspace = true }
bytes         = { workspace = true }
futures       = { workspace = true }
prost         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sqlx          = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true, features = [ "postgres" ] }
tokio                  = { workspace = true, features = [ "macros" ] }
uuid                   = { workspace = true }
