[package]
name          = "eventsourced-projection"
description   = "Projections for EventSourced."
version       = "0.6.1"
readme        = "README.md"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced-projection/latest/eventsourced-projection"

[dependencies]
eventsourced  = { path = "../eventsourced", version = "0.27.0", features = [ "serde_json" ] }
bytes         = { workspace = true }
error-ext     = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sqlx          = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true, features = [ "postgres" ] }
tokio                  = { workspace = true, features = [ "macros" ] }
uuid                   = { workspace = true }
