[package]
name          = "eventsourced"
description   = "Event sourced entities in Rust."
version       = "0.7.0"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced/latest/eventsourced"

[dependencies]
bytes            = { workspace = true }
futures          = { workspace = true }
pin-project-lite = { workspace = true }
prost            = { workspace = true, optional = true }
serde            = { workspace = true }
serde_json       = { workspace = true, optional = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
uuid             = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
tokio        = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
