[package]
name          = "eventsourced"
description   = "Event sourced entities in Rust."
version       = "0.15.0"
readme        = "README.md"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = "https://docs.rs/eventsourced/latest/eventsourced"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
anyhow        = { workspace = true }
bytes         = { workspace = true }
futures       = { workspace = true }
prost         = { workspace = true, optional = true }
serde         = { workspace = true }
serde_json    = { workspace = true, optional = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = [ "rt-multi-thread" ] }
tracing       = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
tokio        = { workspace = true, features = [ "macros", "rt-multi-thread", "time" ] }
tracing-test = { workspace = true }
uuid         = { workspace = true }
