[package]
name          = "counter-nats"
description   = "eventsourced example using eventsourced-nats"
version       = "0.3.0"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = false

[dependencies]
counter            = { path = "../counter" }
eventsourced       = { path = "../../eventsourced" }
eventsourced-nats  = { path = "../../eventsourced-nats" }
anyhow             = { workspace = true }
configured         = { workspace = true }
serde              = { workspace = true }
tokio              = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
tracing-subscriber = { workspace = true }
