[package]
name        = "counter-nats"
description = "eventsourced example using eventsourced-nats"
version     = "0.4.0"
edition     = { workspace = true }
publish     = false

[dependencies]
counter            = { path = "../counter" }
eventsourced       = { path = "../../eventsourced" }
eventsourced-nats  = { path = "../../eventsourced-nats" }
anyhow             = { workspace = true }
configured         = { workspace = true }
serde              = { workspace = true }
tokio              = { workspace = true, features = [ "macros" ] }
tracing-subscriber = { workspace = true }
