[package]
name        = "counter-postgres"
description = "eventsourced example using eventsourced-postgres"
version     = "0.3.0"
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
publish     = false

[dependencies]
counter               = { path = "../counter" }
eventsourced          = { path = "../../eventsourced" }
eventsourced-postgres = { path = "../../eventsourced-postgres" }
anyhow                = { workspace = true }
configured            = { workspace = true }
serde                 = { workspace = true }
tokio                 = { workspace = true, features = [ "macros" ] }
tracing-subscriber    = { workspace = true }
