[package]
name        = "counter-postgres"
description = "eventsourced example using eventsourced-postgres"
version     = "0.4.0"
edition     = { workspace = true }
publish     = false

[dependencies]
counter               = { path = "../counter" }
eventsourced          = { path = "../../eventsourced" }
eventsourced-postgres = { path = "../../eventsourced-postgres" }
anyhow                = { workspace = true }
configured            = { workspace = true }
serde                 = { workspace = true }
tokio                 = { workspace = true, features = [ "macros" ] }
tracing-subscriber    = { workspace = true }
