[package]
name        = "counter"
description = "eventsourced example base"
version     = "0.3.0"
edition     = { workspace = true }
publish     = false

[dependencies]
eventsourced = { path = "../../eventsourced", features = [ "serde_json" ] }
anyhow       = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
tokio        = { workspace = true, features = [ "rt-multi-thread" ] }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
